2020-12-16 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/pic14/aclocal.m4:
	  Update to automake 1.16.2 to fix bug #3140.

2020-12-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCC.lex,
	  src/SDCCerr.c,
	  src/SDCCerr.h,
	  src/SDCCval.c,
	  .version,
	  support/regression/test/digit_separators.c:
	  C23 digit separators.

2020-12-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCC.lex,
	  src/SDCCerr.h,
	  src/SDCCerr.c,
	  src/SDCCval.c,
	  .version:
	  C23 disallows concatenation of differently-prefixed string literals (N2594).

2020-12-01 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Improve &, |, ^ by integer constant expression, merge ^ and ~.

2020-11-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCmain.c,
	  device/include/Makefile.in,
	  device/include/rab,
	  .version:
	  Migrate Rabbit headers from OpenRabbit to SDCC.

2020-11-28 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/main.c:
	  Change Rabbit default data location to 0xa000.

2020-11-27 Philipp Klaus Krause <pkk AT spth.de>

	* doc/sdccman.lyx:
	  Update links to upstream ASxxxx, patch by Warner Losh.

2020-11-24 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Unify ~,^.

2020-11-24 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Improve handling of rematerialized stack locations in +,-.
	* src/stm8/peeph.def:
	  Improve negation of carry result.

2020-11-23 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCopt.c:
	  Enable non-zero right GET_VALUE_AT_ADDRESS operand for tlcs90.
	* src/SDCClospre.cc:
	  Enable speculative division for pdk in lospre (though pdk does not use lospre yet).

2020-11-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/pic14/glue.c:
	  --code-loc support for pic14, patch by Georgi Georgiev.

2020-11-10 Philipp Klaus Krause <pkk AT spth.de>

	* sim/ucsim/sim.src/mem.cc:
	  Fix spelling in debug message.
	  sim/ucsim/doc/index.html:
	  Reencode to UTF-8.

2020-11-04 Philipp Klaus Krause <pkk AT spth.de>
