@@ -2,6 +2,8 @@
 
 	* device/lib/pic14/aclocal.m4:
 	  Update to automake 1.16.2 to fix bug #3140.
+	* device/lib/pic14/libc/Makefile.am:
+	  Port itoa, ltoa rename to pic14 to fix bug #3110.
 
 2020-12-03 Philipp Klaus Krause <pkk AT spth.de>
 
